# config

examples/simple/: CMakeLists.txt  config.hpp  main.cpp
include/adn/config/: config_base.hpp  dummy_logger.hpp  var.hpp
